feat: add resilience and security infrastructure
- Add PM2 for process management
- Add systemd service for auto-start on boot
- Add health endpoint (/health) for monitoring
- Add deployment script (deploy.sh)
- Add CHANGELOG.md for version tracking

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^24.37.3"
+  },
+  "devDependencies": {
+    "pm2": "^6.0.14"
   }
 }
