deploy: Turbo Paper Boat Vault live on Sepolia
Addresses:
- Vault: 0x1B504E187D163eB3fA08A67A9052f80bcad7705a
- Oracle: 0xFE08a1Ca37DE2d431FdF53083E3D3a72Eb5E0467
- NFT: 0xedF6Cd025012CbD926e673623F8418551332B83F
- Strategy: 0x411dD419AbE0DD9d0608a73E9c5fC665cD6E657e

- Fixed Oracle/Strategy init to accept address(0) for circular deps
- Added MockERC20 for testnet tokens
- DeploySepolia script with mock tokens + role setup

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -8,7 +8,7 @@ optimizer_runs = 200
 via_ir = true
 
 [rpc_endpoints]
-sepolia = "https://rpc2.sepolia.org"
+sepolia = "https://0xrpc.io/sep"
 
 [fmt]
 bracket_spacing = true
